# MegaQC

./: package-lock.json  package.json  pyproject.toml  setup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: build.yaml  publish_docs.yaml  release.yaml  run_precommit.yml
docs/: requirements.txt
megaqc/: __init__.py  cli.py
